src/core/src/cache/tests/snapshots/liquid_cache__cache__tests__squeezed__read_squeezed_date_time.snap
---
source: src/core/src/cache/tests/squeezed.rs
expression: trace
---
EventTrace: [
event=insert_success entry=0 kind=MemoryArrow
event=insert_success entry=1 kind=MemoryArrow
event=insert_failed entry=2 kind=MemoryArrow
event=squeeze_begin victims=[0,1]
event=squeeze_victim entry=0
event=insert_success entry=0 kind=MemoryLiquid
event=squeeze_victim entry=1
event=insert_success entry=1 kind=MemoryLiquid
event=insert_success entry=2 kind=MemoryArrow
event=insert_failed entry=3 kind=MemoryArrow
event=squeeze_begin victims=[2,0,1]
event=squeeze_victim entry=2
event=insert_success entry=2 kind=MemoryLiquid
event=squeeze_victim entry=0
event=io_write entry=0 kind=MemorySqueezedLiquid bytes=6184
event=insert_success entry=0 kind=MemorySqueezedLiquid
event=squeeze_victim entry=1
event=io_write entry=1 kind=MemorySqueezedLiquid bytes=6184
event=insert_success entry=1 kind=MemorySqueezedLiquid
event=insert_success entry=3 kind=MemoryArrow
event=read entry=0 selection=false expr=ExtractDate32[Year] cached=MemorySqueezedLiquid
event=read_squeezed_data entry=0 expression=ExtractDate32[Year]
event=read entry=1 selection=false expr=ExtractDate32[Year] cached=MemorySqueezedLiquid
event=read_squeezed_data entry=1 expression=ExtractDate32[Year]
event=read entry=2 selection=false expr=ExtractDate32[Year] cached=MemoryLiquid
event=read entry=3 selection=false expr=ExtractDate32[Year] cached=MemoryArrow
event=read entry=1 selection=false expr=ExtractDate32[Month] cached=MemorySqueezedLiquid
event=io_read_squeezed_backing entry=1 bytes=6184
]
