src/core/src/cache/tests/snapshots/liquid_cache__cache__tests__squeezed__read_squeezed_int64_array.snap
---
source: src/core/src/cache/tests/squeezed.rs
expression: trace
---
EventTrace: [
event=insert_success entry=0 kind=MemoryArrow
event=insert_success entry=1 kind=MemoryArrow
event=insert_failed entry=2 kind=MemoryArrow
event=squeeze_begin victims=[0,1]
event=squeeze_victim entry=0
event=insert_success entry=0 kind=MemoryLiquid
event=squeeze_victim entry=1
event=insert_success entry=1 kind=MemoryLiquid
event=insert_success entry=2 kind=MemoryArrow
event=insert_failed entry=3 kind=MemoryArrow
event=squeeze_begin victims=[2,0,1]
event=squeeze_victim entry=2
event=insert_success entry=2 kind=MemoryLiquid
event=squeeze_victim entry=0
event=io_write entry=0 kind=MemorySqueezedLiquid bytes=6184
event=squeeze_victim entry=1
event=io_write entry=1 kind=DiskLiquid bytes=6184
event=insert_success entry=0 kind=MemorySqueezedLiquid
event=insert_success entry=1 kind=DiskLiquid
event=insert_success entry=3 kind=MemoryArrow
event=read entry=0 selection=false expr=PredicateColumn cached=MemorySqueezedLiquid
event=io_read_squeezed_backing entry=0 bytes=6184
event=read entry=1 selection=false expr=PredicateColumn cached=DiskLiquid
event=io_read_liquid entry=1 bytes=6184
event=hydrate entry=1 cached=DiskLiquid new=MemoryLiquid
event=insert_success entry=1 kind=MemoryLiquid
event=read entry=2 selection=false expr=PredicateColumn cached=MemoryLiquid
event=read entry=3 selection=false expr=PredicateColumn cached=MemoryArrow
]
